# inzone-linux

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
contrib/: 70-sony-inzone-buds.rules  inzone-buds-tray.desktop  inzone-buds-tray.service
docs/: protocol.md
src/: lib.rs  main.rs
tests/: cli.rs  tray.rs
tests/unit/: inzone-buds-tray.rs  lib.rs  main_tests.rs
